# tanglism

./: .gitignore  .travis.yml  Cargo.toml  README.md  cobertura.xml
.github/workflows/: rust.yml
jqdata/: Cargo.toml
jqdata-derive/: Cargo.toml
jqdata-derive/src/: lib.rs
jqdata-macro/: Cargo.toml
jqdata-macro/src/: lib.rs
jqdata-shell/: Cargo.toml  Cargo.toml.not-used  fetch.sh  jqdata.db  securities.sql  stock.csv  token.sh
jqdata-shell/schema/: tables.ddl.sql
jqdata-shell/src/: datetime.rs  error.rs  insert.rs  lib.rs  main.rs  select.rs
jqdata/src/: cli.rs  error.rs  lib.rs  model.rs
src/: data.rs  lib.rs  morph.rs  reshape.rs
tanglism-data/: Cargo.toml  build.rs
tanglism-data/data/: trade_days.csv
tanglism-data/src/: lib.rs  trade_days.rs
tanglism-morph/: Cargo.toml
tanglism-morph/src/: center.rs  error.rs  lib.rs  parting.rs  profile.rs  segment.rs  shape.rs  stream.rs  stroke.rs  subtrend.rs  synth.rs  trend.rs
tanglism-utils/: Cargo.toml
tanglism-utils/src/: error.rs  lib.rs  trading_date.rs  trading_timestamp.rs
tanglism-web/: Cargo.toml  hs300.sql  hs300.txt
tanglism-web/migrations/2020-03-23-235429_trade_days/: down.sql  up.sql
tanglism-web/migrations/2020-03-24-141132_securities/: up.sql
tanglism-web/migrations/2020-03-28-113702_stock_price_ticks/: down.sql  up.sql
tanglism-web/migrations/2020-03-29-012707_stock_daily_prices/: down.sql  up.sql
tanglism-web/migrations/2020-04-10-000519_stock_tick_prices/: down.sql  up.sql
tanglism-web/migrations/2020-06-18-011000_add-msci/: down.sql  up.sql
tanglism-web/migrations/2020-07-05-004911_add_hs300/: down.sql  up.sql
tanglism-web/src/: errors.rs  helpers.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
tanglism-web/src/handlers/: choice.rs  health.rs  metrics.rs  mod.rs  stock_price_ticks.rs  stock_prices.rs  stocks.rs  tanglism.rs  trade_days.rs
tanglism-web/src/handlers/metrics/: atr.rs  ema.rs  ma.rs
tanglism-web/src/handlers/stock_prices/: daily.rs  tick.rs  ticks.rs
tanglism-web/src/ws/: mod.rs  session.rs
tanglism-web/static/: index.html  main.css
tanglism-web/static/js/: atr.js  choice.js  tanglism-center.js  tanglism-common.js  tanglism-draw.js  tanglism-kline.js  tanglism-metric.js  tanglism-parting.js  tanglism-segment.js  tanglism-stroke.js  tanglism-subtrend.js  tanglism-trend.js  tanglism.js
tests/: cli_test.rs  jqdata.rs  jqdata_client_test.rs  jqdata_model_test.rs
