[package]
name = "tanglism"
version = "0.1.0"
authors = ["jiangzhe <zhe.jiang@transwarp.io>"]
edition = "2018"
keywords = ["joinquant", "quant", "jqdata"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jiangzhe/tanglism"

[workspace]
members = ["jqdata", "jqdata-derive", "jqdata-shell"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json", "blocking"] }
mockito = "0.23"
jqdata = { version = "0.1.0", path = "./jqdata" }
