[package]
name = "jqdata-macro"
version = "0.1.0"
authors = ["jiangzhe <zhe.jiang@transwarp.io>"]
edition = "2018"
keywords = ["joinquant", "quant", "jqdata"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jiangzhe/tanglism/jqdata"
workspace = ".."

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.8"

[lib]
proc_macro = true