[package]
name = "tanglism-data"
version = "0.1.0"
authors = ["Zhe Jiang <nju.jiangzhe@gmail.com>"]
edition = "2018"
workspace = ".."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"

[build-dependencies]
quote = "1.0"
proc-macro2 = "1.0"
