[package]
name = "tanglism-morph"
version = "0.1.0"
authors = ["Zhe Jiang <nju.jiangzhe@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
bigdecimal = { version = "=0.1.0", features = ["serde"] }
lazy_static = "1.4"
tanglism-utils = { version = "0.1.0", path = "../tanglism-utils" }

[dev-dependencies]
serde_json = "1.0"
