[package]
name = "tanglism-web"
version = "0.1.0"
authors = ["Zhe Jiang <nju.jiangzhe@gmail.com>"]
edition = "2018"
workspace = ".."

[[bin]]
name = "tanglism-web"
path = "./src/bin/server.rs"

[dependencies]
futures = "0.3"
env_logger = "0.7"
bytes = "0.5.4"
derive_more = "0.99"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tanglism-morph = { version = "0.1.0", path = "../tanglism-morph" }
tanglism-utils = { version = "0.1.0", path = "../tanglism-utils" }
structopt = "0.3"
diesel = { version = "=1.4.4", features = ["postgres", "r2d2", "chrono", "numeric"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "=0.1.0", features = ["serde"] }
jqdata = "0.3.4"
r2d2 = "0.8"
log = "0.4"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"

[dev-dependencies]
serde_json = "1.0"
